my-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: <DNS of AWS LB that is internet facing and serves nodes of KOPS K8s instance>
    http:
      paths:
      - path: /
        backend:
          serviceName: my-deployment
          servicePort: <PORT>
